[package]
name = "db-conn-odbc"
version = "0.1.0"
edition = "2021"
description = "An ODBC database client written in Rust"
authors = ["Your Name <your.email@example.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odbc-api = "13.0.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
